# climate-development

./: .gitignore  PREVIEW_LOCALLY.md  README.md  index.html  pyproject.toml
data/: README.md  climate_data.py  data_pipeline.py
data/processed/: cluster_summary.csv  discipline_analysis_clean.csv  ecdi_analysis_clean.csv
data/regressions/: results_stata.txt
milestones/: static-draft.md  static-proposal.md
notebooks/: eda.ipynb
src/: README.md  data_pipeline.py  generate_graphs.py
static_viz/: index.html
