[project]
name = "static-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "cdsapi>=0.7.7",
    "dask>=2025.10.0",
    "fastparquet>=2024.11.0",
    "ipykernel>=7.0.1",
    "netcdf4>=1.7.3",
    "pandas>=2.3.3",
    "polars>=1.34.0",
    "pyarrow>=21.0.0",
    "statsmodels>=0.14.5",
    "vegafusion>=2.0.3",
    "vl-convert-python>=1.8.0",
    "xarray>=2025.10.1",
]
